--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div id="logged-out-view" style="display: flex; align-items: center; gap: 10px;">
-        <a href="/login" class="check-button" style="padding: 8px 15px; font-size: 0.9rem; text-decoration: none;">Anmelden</a>
+        <a href="/login.html" class="check-button" style="padding: 8px 15px; font-size: 0.9rem; text-decoration: none;">Anmelden</a>
     </div>
 
     <div id="logged-in-view" style="display: none; align-items: center; gap: 10px;">
